fix project validator message spacing

--- a/frontend/src/components/Projects/ProjectCard.css
+++ b/frontend/src/components/Projects/ProjectCard.css
@@ -24,7 +24,6 @@
               height 700ms var(--my-cubic-bezier);
 }
 
-
 .card-and-controls-container {
   display: flex;
   flex-direction: column;
@@ -42,10 +41,12 @@
 .project-error-message {
   padding: 12px 18px;
   border-radius: 6px;
-  position: absolute;
-  bottom: 44%;
   background-color: var(--nav-bar-bg);
   color: var(--error-color);
+}
+
+.error-flex-spacer {
+  opacity: 0;  
 }
 
 .buttons-offset {
